Added X-freame header option for allow only in Wecom

--- a/vercel.json
+++ b/vercel.json
@@ -11,13 +11,10 @@
       ]
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/",
-      "dest": "/Form.html"
+      "source": "/",
+      "destination": "/Form.html"
     }
   ]
 }
