--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   "rewrites": [
     {
       "source": "/",
-      "destination": "/Form.html"
+      "destination": "/index.html"
     }
   ]
 }
